--- a/shippable.yml
+++ b/shippable.yml
@@ -4,7 +4,7 @@ sudo: required
 
 build:
  ci:
-  - apt-get install build-essential fakeroot devscripts
+  - apt-get install -y build-essential fakeroot devscripts
   - curl -o http://http.debian.net/debian/pool/main/x/xcb-util-xrm/xcb-util-xrm_1.0.orig.tar.bz2
   - bunzip2 xcb-util-xrm_1.0.orig.tar.bz2 && rm xcb-util-xrm_1.0.orig.tar.bz2
   - tar -xvf xcb-util-xrm_1.0.orig.tar && rm xcb-util-xrm_1.0.orig.tar
