--- a/shippable.yml
+++ b/shippable.yml
@@ -10,7 +10,7 @@ build:
   - tar -xvf xcb-util-xrm_1.0.orig.tar && rm xcb-util-xrm_1.0.orig.tar
   - curl -L -O http://http.debian.net/debian/pool/main/x/xcb-util-xrm/xcb-util-xrm_1.0-2.debian.tar.xz
   - tar -xvJf xcb-util-xrm_1.0-2.debian.tar.xz
-  - ls -artl
+  - cat /etc/apt/sources.list | grep deb-src. 
   - cd xcb-util-xrm-1.0
   - ./configure && make && make install
   - cd -
