--- a/shippable.yml
+++ b/shippable.yml
@@ -4,7 +4,7 @@ sudo: required
 
 build:
  ci:
-  - apt-get update && apt-get install -y build-essential fakeroot devscripts libxcb-keysyms1-dev libpango1.0-dev libxcb-util0-dev xcb libxcb1-dev libxcb-icccm4-dev libyajl-dev libev-dev libxcb-xkb-dev libxcb-cursor-dev libxkbcommon-dev libxcb-xinerama0-dev libxkbcommon-x11-dev libstartup-notification0-dev libxcb-randr0-dev
+  - apt-get update && apt-get install -y build-essential fakeroot devscripts libxcb-keysyms1-dev libpango1.0-dev libxcb-util0-dev xcb libxcb1-dev libxcb-icccm4-dev libyajl-dev libev-dev libxcb-xkb-dev libxcb-cursor-dev libxkbcommon-dev libxcb-xinerama0-dev libxkbcommon-x11-dev libstartup-notification0-dev libxcb-randr0-dev dh-autoreconf libx11-xcb-dev xutils-dev
   - curl -L -O http://http.debian.net/debian/pool/main/x/xcb-util-xrm/xcb-util-xrm_1.0.orig.tar.bz2
   - file xcb-util-xrm_1.0.orig.tar.bz2 && bunzip2 xcb-util-xrm_1.0.orig.tar.bz2
   - tar -xvf xcb-util-xrm_1.0.orig.tar && rm xcb-util-xrm_1.0.orig.tar
