--- a/shippable.yml
+++ b/shippable.yml
@@ -4,25 +4,33 @@ sudo: required
 
 build:
  ci:
+ # dependencies to be able to build
   - apt-get update && apt-get install -y build-essential fakeroot devscripts libxcb-keysyms1-dev libpango1.0-dev libxcb-util0-dev xcb libxcb1-dev libxcb-icccm4-dev libyajl-dev libev-dev libxcb-xkb-dev libxcb-cursor-dev libxkbcommon-dev libxcb-xinerama0-dev libxkbcommon-x11-dev libstartup-notification0-dev libxcb-randr0-dev dh-autoreconf libx11-xcb-dev xutils-dev
+ # xcb is not available as a package for aarch64, let's download and build its debian package
   - curl -L -O http://http.debian.net/debian/pool/main/x/xcb-util-xrm/xcb-util-xrm_1.0.orig.tar.bz2
-  - file xcb-util-xrm_1.0.orig.tar.bz2 && bunzip2 xcb-util-xrm_1.0.orig.tar.bz2
+  - bunzip2 xcb-util-xrm_1.0.orig.tar.bz2
   - tar -xvf xcb-util-xrm_1.0.orig.tar && rm xcb-util-xrm_1.0.orig.tar
   - cd xcb-util-xrm-1.0
   - curl -L -O http://http.debian.net/debian/pool/main/x/xcb-util-xrm/xcb-util-xrm_1.0-2.debian.tar.xz
   - tar -xvJf xcb-util-xrm_1.0-2.debian.tar.xz
   - ./configure && make && make install
   - debuild -b -uc -us
+# Let's install it  
   - dpkg -i ../libxcb-xrm-dev_1.0-2_arm64.deb ../libxcb-xrm0_1.0-2_arm64.deb
   - cd -
+# Let's download and install i3-gaps  
   - export TERM=linux
   - git clone https://www.github.com/Airblader/i3 i3-gaps
   - cd i3-gaps
+  - curl -L -O http://http.debian.net/debian/pool/main/i/i3-wm/i3-wm_4.13-1.debian.tar.xz
+  - tar -xvJf i3-wm_4.13-1.debian.tar.xz
   - autoreconf --force --install
   - rm -rf build/
   - mkdir -p build && cd build/
   - ../configure --prefix=/usr --sysconfdir=/etc --disable-sanitizers
   - make && make install
+  - debuild -b -uc -us
+# Package, anyone?  
   - cd && chmod +x i3-gaps-deb && ./i3-gaps-deb
 
 runtime:
