--- a/shippable.yml
+++ b/shippable.yml
@@ -22,8 +22,9 @@ build:
   - export TERM=linux
   - git clone https://www.github.com/Airblader/i3 i3-gaps
   - cd i3-gaps
-  - curl -L -O http://http.debian.net/debian/pool/main/i/i3-wm/i3-wm_4.13-1.debian.tar.xz
-  - tar -xvJf i3-wm_4.13-1.debian.tar.xz
+#  - curl -L -O http://http.debian.net/debian/pool/main/i/i3-wm/i3-wm_4.13-1.debian.tar.xz
+#  - tar -xvJf i3-wm_4.13-1.debian.tar.xz
+  - mv ../debian . 
   - autoreconf --force --install
   - rm -rf build/
   - mkdir -p build && cd build/
