--- a/shippable.yml
+++ b/shippable.yml
@@ -24,7 +24,7 @@ build:
   - cd i3-gaps
 #  - curl -L -O http://http.debian.net/debian/pool/main/i/i3-wm/i3-wm_4.13-1.debian.tar.xz
 #  - tar -xvJf i3-wm_4.13-1.debian.tar.xz
-  - mv ../debian . 
+  - cp -vraxu ../debian . 
   - autoreconf --force --install
   - rm -rf build/
   - mkdir -p build && cd build/
