--- a/shippable.yml
+++ b/shippable.yml
@@ -30,9 +30,9 @@ build:
   - mkdir -p build && cd build/
   - ../configure --prefix=/usr --sysconfdir=/etc --disable-sanitizers
   - make && make install
-  - debuild -b -uc -us
+#  - debuild -b -uc -us
 # Package, anyone?  
-#  - cd && chmod +x i3-gaps-deb && ./i3-gaps-deb
+  - cd && chmod +x i3-gaps-deb && ./i3-gaps-deb
 
 runtime:
   nodePool: shippable_shared_aarch64
