--- a/shippable.yml
+++ b/shippable.yml
@@ -32,7 +32,7 @@ build:
   - make && make install
 #  - debuild -b -uc -us
 # Package, anyone?  
-  - which i3
+  - cat /etc/apt/sources.list*
   - cd ~/i3-gaps-deb && chmod +x i3-gaps-deb && yes|./i3-gaps-deb
 
 runtime:
